# qac

./: .gitignore  CMakeLists.txt  README.md  lexer.cpp  lexer.h  main.cpp  parser.cpp  qac_config.h.in
cmake/Modules/: FindGFlags.cmake  FindGlog.cmake
examples/: 3q.qa  complex.qa  example.qa  example2.qa  example3.qa
include/qac/generator/: anki-generator.h  generator.h  html-generator.h
include/qac/lexer/: lexer.h
include/qac/parser/: ast_nodes.h  ast_render_visitor.h  cst_nodes.h  cst_to_ast_visitor.h  parser.h
src/: flags.cpp  main.cpp
src/generator/: anki-generator.cpp  generator.cpp  html-generator.cpp
src/lexer/: lexer.cpp
src/parser/: ast_nodes.cpp  ast_render_visitor.cpp  cst_to_ast_visitor.cpp  parser.cpp
test/: lexer_test.cpp  parser_test.cpp  test.cpp
